re PR c++/26740 (ICE taking the address of a bound member function)

2006-06-01  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/26740
        * typeck.c (build_unary_op): Mark the function as being used.

From-SVN: r114360